--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,10 @@
     "name": "backend",
     "version": "0.1.0",
     "scripts": {
-        "start":"node server.js"
-  }
+        "start": "node server.js"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.19.2"
+    }
 }
