--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,10 @@
 {
     "name": "backend",
     "version": "0.1.0",
+    "main": "server.js",
     "scripts": {
-        "start": "node server.js"
+        "dev": "node server.js",
+        "build":"npm i"
     },
     "dependencies": {
         "cors": "^2.8.5",
