--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,15 @@
     "version": "0.1.0",
     "main": "server.js",
     "scripts": {
-        "dev": "node server.js",
-        "build":"npm i"
+        "dev": "nodemon server.js",
+        "start": "node server.js",
+        "build": "npm i"
     },
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.19.2"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.4"
     }
 }
