--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,13 @@
         "build": "npm i"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "config": "^3.3.12",
         "cors": "^2.8.5",
-        "express": "^4.19.2"
+        "express": "^4.19.2",
+        "express-validator": "^7.2.0",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.6.2"
     },
     "devDependencies": {
         "nodemon": "^3.1.4"
